--- a/index.cshtml
+++ b/index.cshtml
@@ -1,70 +1,122 @@
-@page
-@model IndexModel
-@{
-    ViewData["Title"] = "Home page";
-}
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-    short {
-              
-color
-    }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <title>Document</title>
 </head>
 
-
- <div class="container">
-        <div class="row">
-
-            
-
-                <div class="col-4">
-                    <div id="canvas-holder">
-                      <canvas id="chart-area"></canvas>
+<body>
+    <main class="w-75 m-auto mt-5">
+        <div class="mt-5">
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-5">
+                    <div class="row">
+                        <div class="col-12 m-auto" style="width: 65%;">
+                            <div id="canvas-holder">
+                            </div>
+                            <canvas id="myChart" width="100" height="100"></canvas>
+                        </div>
                     </div>
-                  
-                    <canvas id="myChart" width="100" height="100"></canvas>
-                    <script>
-                    const ctx = document.getElementById('myChart').getContext('2d');
-                    const myChart = new Chart(ctx, {
-                        type: 'doughnut',
-                        data: {
-                            labels: ['Aktif İş İlanı', 'Aday', 'Aktif Çalışan'],
-                            datasets: [{
-                                label: 'Kullanıcı Verileri',
-                                data: [40,92,35],
-                                backgroundColor: [
-                                    'rgb(255, 99, 132)',
-                                    'rgb(54, 162, 235)',
-                                    'rgb(255, 206, 86)'
-                                ],
-                                hoverOffset: 4
-                            }]
-                        },
-                        options: {
-                            scales: {
-                                y: {
-                                    beginAtZero: true
-                                }
-                            }
-                        }
-                    });
-                 
-                    </script>
-                  </div>
-           
-          <div class="col-6 text-primary">
-              <h1 id ="short">
-                  HIZLI İŞLEMLER
-              </h1>
-          </div>
+                    <div class="row">
+                        <div class="col-12 w-75 m-auto">
+                            <h1 class="text-primary d-block mb-3 text-center">Toplam Veri Sayısı</h1>
+                            <p class="text-primary fw-bold fs-4">Aday: 92</p>
+                            <p class="text-primary fw-bold fs-4">Aktif Çalışan: 35</p>
+                            <p class="text-primary fw-bold fs-4">Aktif İş İlanı: 40</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="vr p-0 mx-5"></div>
+                <div class="col-5">
+                    <h1 class="text-center fw-bold text-primary">
+                        HIZLI İŞLEMLER
+                    </h1>
+                    <div class="container-fluid my-5">
+                        <div class="row text-center">
+                            <div class="col-4">
+                                <a href="#" class="text-decoration-none">
+                                    <span class="btn btn-primary mb-1"><i class="bi bi-person display-4"></i></span>
+                                    <p class="fs-4 fw-bold">Yeni Aday Oluştur</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#" class="text-decoration-none">
+                                    <span class="btn btn-primary mb-1"><i class="bi bi-file-earmark-person display-4"></i></i></span>
+                                    <p class="fs-4 fw-bold">Yeni İlan Oluştur</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#" class="text-decoration-none">
+                                    <span class="btn btn-primary mb-1"><i class="bi bi-person display-4"></i></span>
+                                    <p class="fs-4 fw-bold">Yeni Aday Oluştur</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#" class="text-decoration-none">
+                                    <span class="btn btn-primary mb-1"><i class="bi bi-person display-4"></i></span>
+                                    <p class="fs-4 fw-bold">Yeni Aday Oluştur</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#" class="text-decoration-none">
+                                    <span class="btn btn-primary mb-1"><i class="bi bi-person display-4"></i></span>
+                                    <p class="fs-4 fw-bold">Yeni Aday Oluştur</p>
+                                </a>
+                            </div>
+                            <div class="col-4">
+                                <a href="#" class="text-decoration-none">
+                                    <span class="btn btn-primary mb-1"><i class="bi bi-person display-4"></i></span>
+                                    <p class="fs-4 fw-bold">Yeni Aday Oluştur</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        </div>
+    </main>
+</body>
+<script>
+    const ctx = document.getElementById('myChart').getContext('2d');
+    const myChart = new Chart(ctx, {
+        type: 'doughnut',
+        data: {
+            labels: ['Aktif İş İlanı', 'Aday', 'Aktif Çalışan'],
+            datasets: [{
+                label: 'Kullanıcı Verileri',
+                data: [40, 92, 35],
+                backgroundColor: [
+                    'rgb(255, 99, 132)',
+                    'rgb(54, 162, 235)',
+                    'rgb(255, 206, 86)'
+                ],
+                hoverOffset: 4
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+    });
 
+</script>
 
-        <h1 id ="baslik" class="container">
-        <h1 class="row">
-            <h1 class= "col-4 pl-3 text-primary">  Toplam Veri Sayısı</h1>
-            </h1>
-                        </h1>
+</html>
